<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.fingerpaint.MainActivity">
    <item
        android:id="@+id/menu_new"
        android:title="@string/menu_new" />
    <item
        android:id="@+id/menu_open"
        android:title="@string/menu_open" />
    <item
        android:id="@+id/menu_save"
        android:title="@string/menu_save" />
    <item
        android:id="@+id/menu_color_change"
        android:title="@string/menu_color_change" />
    <item
        android:id="@+id/menu_font_size"
        android:title="@string/menu_font_size">
        <menu>
            <item
                android:id="@+id/menu_font_size_s"
                android:title="@string/menu_font_size_s" />
            <item
                android:id="@+id/menu_font_size_m"
                android:title="@string/menu_font_size_m" />
            <item
                android:id="@+id/menu_font_size_l"
                android:title="@string/menu_font_size_l" />
        </menu>
    </item>
</menu>